// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render info with status FAILED 1`] = `
<div
  class="fd-panel sc-bwzfXH sPJOf"
  color="#ee0000"
  data-e2e-id="instance-status"
>
  <div
    class="fd-panel__header sc-htpNat fsNzZS"
  >
    Status
    <div
      class="fd-panel__actions"
    >
      <span
        class="sap-icon--sys-cancel"
        style="color:#ee0000"
      />
    </div>
  </div>
  <div
    class="fd-panel__body"
  >
    <div
      class="sc-bxivhb cvfAWp"
      style="color:#ee0000"
    >
      FAILED
    </div>
    <div
      class="sc-bxivhb EDakJ"
      style="padding:0"
    >
      The instance was provisioned successfully
    </div>
  </div>
</div>
`;

exports[`Render info with status PROVISIONING 1`] = `
<div
  class="fd-panel sc-bwzfXH bKkzNl"
  color="#ffb600"
  data-e2e-id="instance-status"
>
  <div
    class="fd-panel__header sc-htpNat fsNzZS"
  >
    Status
    <div
      class="fd-panel__actions"
    >
      <span
        class="sap-icon--sys-help"
        style="color:#ffb600"
      />
    </div>
  </div>
  <div
    class="fd-panel__body"
  >
    <div
      class="sc-bxivhb cvfAWp"
      style="color:#ffb600"
    >
      PROVISIONING
    </div>
    <div
      class="sc-bxivhb EDakJ"
      style="padding:0"
    >
      The instance was provisioned successfully
    </div>
  </div>
</div>
`;

exports[`Render info with status RUNNING 1`] = `
<div
  class="fd-panel sc-bwzfXH iEwrcE"
  color="#3db350"
  data-e2e-id="instance-status"
>
  <div
    class="fd-panel__header sc-htpNat fsNzZS"
  >
    Status
    <div
      class="fd-panel__actions"
    >
      <span
        class="sap-icon--sys-enter"
        style="color:#3db350"
      />
    </div>
  </div>
  <div
    class="fd-panel__body"
  >
    <div
      class="sc-bxivhb cvfAWp"
      style="color:#3db350"
    >
      RUNNING
    </div>
    <div
      class="sc-bxivhb EDakJ"
      style="padding:0"
    >
      The instance was provisioned successfully
    </div>
  </div>
</div>
`;
